--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,52 @@
-body
+/* *
 {
-    border: solid 2px orange;
-}
-#header
+    outline: solid 2px orange;
+    padding: 1em 1em 1em 1em;
+} */
+
+.logoElement
 {
-    position: absolute;
-    
-    /* display: block; */
+    font-size: 4em;
+    margin-left: 3.5em;
+    margin-top: -1em;
 }
 
-.upperLeft
+.headerButtons
+{
+    margin-top: -3em;
+    float: right;
+    margin-right: 3em;
+}
+
+.picturesSection
+{
+    margin-top: 3em;
+    margin-left: 30em;
+}
+.picturesSelection
 {
     display: inline;
-    position: relative;
+    padding: 1em 1em 1em 1em;
 }
 
-h2
+#voteButton
 {
-    position: absolute;
-    font-size: 5em;
-    margin-bottom: 1e
-    
+    width: 70%;
+    margin-left: 20%;
+    padding: 1em 1em 1em 1em;
 }
 
-upperRight
+.radioSection
 {
-    position: absolute;
-    /* display: inline-block; */
-    float: right;
+    margin-left: 30em;
 }
 
 
+.radioButtons
+{
+
+    margin-left: 11em;
+    margin-right: 11em;
+    padding-left: 5%;
+    padding-right: 5%;
+}
