--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ button :headerButtons
 .picturesSection
 {
     margin-top: 3em;
-    margin-left: 20em;
+    margin-left: 30em;
 }
 .picturesSelection
 {
@@ -40,11 +40,12 @@ button :headerButtons
     width: 70%;
     margin-left: 20%;
     padding: 1em 1em 1em 1em;
+    margin-top: 2em;
 }
 
 .radioSection
 {
-    margin-left: 20em;
+    margin-left: 30em;
 }
 
 
