--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,10 @@ button :headerButtons
     /* before results on a screen */
     margin-top: 16em;
 }
+
+canvas
+{
+    margin-top: 4em;
+    width: 40%;
+    height: 40%;
+}
