--- a/css/style.css
+++ b/css/style.css
@@ -152,5 +152,23 @@ canvas
 }
 
 
+#picOne
+{
+    /* animation: spin 1.5s linear infinite; */
+}
 
+
+
+/* defining animation  */
+@keyframes spin {
+  0% 
+  {
+    transform: rotateY(0deg);
+  }
+
+  100% 
+  {
+    transform: rotateY(360deg);
+  }
+}
 
